# AlphaRecogAPI

./: .CMakeLists.txt.swp  CMakeLists.txt  MRECOG.cpp  Readme.md  clustPre.cpp  faceAlign.h  faceveri.cpp  featureExByCaffe.h  filesystem.cpp  filesystem.h  utils.cpp
.anjuta/: default.profile
Models/: cppnet.prototxt
Models/deeplandmark/: 1_F.prototxt
